feat: 代码优化与RabbitMQ集成
主要更改:
- 为所有控制器添加 Swagger @Tag 注解 (20个)
- 创建 ApiPaths 常量类统一管理 API 路径
- 重构 QuizController 分页逻辑，统一响应格式
- 添加 QuizServiceImplTest 和 KnowledgeServiceImplTest 单元测试
- 修复 SecurityUtils 异常处理和 UserServiceImpl 优化
- 配置 RabbitMQ 默认启用并加入基础服务
- 修复 docker-compose RabbitMQ 弃用环境变量
- 更新前端 useQuiz.js 适配分页响应格式